tests/baselines/reference/reExportGlobalDeclaration1.errors.txt
tests/cases/compiler/file2.ts(1,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(1,12): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(2,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(2,13): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(4,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(4,12): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(5,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(5,12): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(8,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(9,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(10,9): error TS2661: Cannot re-export name that is not defined in the module.
tests/cases/compiler/file2.ts(11,9): error TS2661: Cannot re-export name that is not defined in the module.


==== tests/cases/compiler/file1.d.ts (0 errors) ====
    
    declare var x: number;
    declare var x1: number;
    declare let {a, b}: {a: number, b: number};
    
==== tests/cases/compiler/file2.ts (12 errors) ====
    export {x, x as y};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
               ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export {x1, x1 as y1};
            ~~
!!! error TS2661: Cannot re-export name that is not defined in the module.
                ~~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    
    export {a, a as a1};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
               ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export {b, b as b1};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
               ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    
    
    export {x as z};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export {x1 as z1};
            ~~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export {a as a2};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    export {b as b2};
            ~
!!! error TS2661: Cannot re-export name that is not defined in the module.
    